Fix java compiler for linux